security/istio-config/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: product-catalog-service
spec:
  host: product-catalog-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
